Enhance http, add database